Fix English translations and terminology
- Corrected typos (lenght→length, saftyStock→safetyStock)
- Fixed grammar errors (Deliveryed→Delivered, Undelivery→Undelivered)
- Updated to standard WMS terminology:
  - Owner Of Cargo → Goods Owner
  - Receiving Management → Inbound Management
  - Delivery Management → Outbound Management
  - Put On The Shelf → Put Away
  - Large Screen → Dashboard
- Fixed capitalization inconsistencies
- Improved readability with proper spacing

--- a/frontend/src/languages/langsJson/en.json
+++ b/frontend/src/languages/langsJson/en.json
@@ -12,7 +12,7 @@
       "category_name": "Commodity Category",
       "cost": "Commodity Cost",
       "height": "Commodity Height",
-      "lenght": "Commodity Length",
+      "length": "Commodity Length",
       "length_unit": "Length Unit",
       "origin": "origin",
       "price": "Commodity Price",
@@ -22,7 +22,7 @@
       "print_data_main": "Data List",
       "print_page_detail": "commodityManagement",
       "print_page_main": "commodityManagement-List",
-      "saftyStock": "Safety stock",
+      "safetyStock": "Safety Stock",
       "sku_code": "Specification Code",
       "sku_name": "Specification Name",
       "spu_code": "Commodity Code",
@@ -78,7 +78,7 @@
       "contact_tel": "Contact Information",
       "create_time": "Create Time",
       "creator": "Creator",
-      "goods_owner_name": "Owner Of Cargo",
+      "goods_owner_name": "Goods Owner",
       "manager": "Person In Charge"
     },
     "printSolution": {
@@ -109,7 +109,7 @@
           "delivered": "To Be Delivered",
           "detail": "Receipt Details",
           "notice": "Arrival notice",
-          "putOnTheShelf": "To Be Put On The Shelf",
+          "putOnTheShelf": "To Be Put Away",
           "sorted": "To Be Sorted",
           "unloaded": "To Be Unloaded"
         },
@@ -239,32 +239,32 @@
   },
   "router": {
     "sideBar": {
-      "asnStatistic": "Receiving statistics",
+      "asnStatistic": "Receiving Statistics",
       "baseModule": "Basic Settings",
       "commodityCategorySetting": "Commodity Category",
       "commodityManagement": "Commodity Management",
       "companySetting": "Company Information",
       "customer": "Customer Info",
-      "deliveryManagement": "Delivery Management",
-      "deliveryStatistic": "Shipment statistics",
-      "stockageStatistic":"Stock Age Analysis",
+      "deliveryManagement": "Outbound Management",
+      "deliveryStatistic": "Shipment Statistics",
+      "stockageStatistic": "Stock Age Analysis",
       "freightSetting": "Freight Setting",
       "homepage": "Home Page",
       "menuBasicSettings": "Menu",
-      "ownerOfCargo": "Owner Information",
+      "ownerOfCargo": "Goods Owner Information",
       "print": "Print Settings",
       "roleMenu": "Permission settings",
       "saftyStock": "Safety Stock",
       "statisticAnalysis": "Statistic Analysis",
-      "stockAsn": "Receiving Management",
+      "stockAsn": "Inbound Management",
       "stockManagement": "Stock Management",
       "supplier": "Supplier Info",
       "userManagement": "User Management",
       "userRoleSetting": "User Role",
-      "vwms": "Visual warehouse",
-      "largeScreen":"Large Screen",
+      "vwms": "Visual Warehouse",
+      "largeScreen": "Dashboard",
       "warehouseAdjust": "Inventory Adjust",
-      "warehouseFreeze": "Inventory freeze",
+      "warehouseFreeze": "Inventory Freeze",
       "warehouseMove": "Inventory Move",
       "warehouseProcessing": "Warehouse Processing",
       "warehouseSetting": "Warehouse Setting",
@@ -405,8 +405,8 @@
       "customer_name": "Customer Name",
       "damagedQuantity": "Damaged quantity upon arrival",
       "delivery": "Delivery",
-      "deliveryReady": "Deliveryed",
-      "deliveryTodo": "Undelivery",
+      "deliveryReady": "Delivered",
+      "deliveryTodo": "Undelivered",
       "departure_city": "Originating city",
       "detailQty": "Quantity",
       "detailQuantityIsZero": "Shipment quantity cannot be 0",
@@ -435,8 +435,8 @@
       "packaged": "Packaged",
       "picked": "Picked",
       "picked_qty": "Picked Quantity",
-      "picker":"picker",
-      "pick_checker":"Picking Auditor",
+      "picker": "Picker",
+      "pick_checker": "Picking Auditor",
       "preShipment": "Pre Shipment",
       "qty": "Total Quantity",
       "qty_available": "Available Quantity",
@@ -525,7 +525,7 @@
       "series_number": "Serial number",
       "expiry_date":"Expiration Date",
       "price":"Commodity Price",
-      "putaway_date":"Listing Date",
+      "putaway_date": "Put Away Date",
       "stock_age": "Stock Age",
       "stock_age_from": "Stock Age from",
       "stock_age_to": "Stock Age to",
@@ -570,7 +570,7 @@
       "tabNotice": "Notice Of Arrival",
       "tabReceiptDetails": "Receipt Details",
       "tabToDoArrival": "To Be Delivered",
-      "tabToDoGrounding": "To Be Put On The Shelf",
+      "tabToDoGrounding": "To Be Put Away",
       "tabToDoSorting": "To Be Sorted",
       "tabToDoUnload": "To Be Unloaded"
     },
@@ -583,27 +583,27 @@
       "asn_qty": "Asn Quantity",
       "price":"Commodity Price",
       "asn_status": "Asn Status",
-      "can_putaway_qty": "Quantity available for listing",
+      "can_putaway_qty": "Quantity Available for Put Away",
       "confirmArrival": "Confirm arrival",
       "confirmUnload": "Confirm unloading",
       "damage_qty": "Damage Quantity",
       "editGrounding": "Edit",
       "editSorting": "Edit",
       "estimated_arrival_time": "Estimated time of arrival",
-      "exceedTip": "The number of listings cannot exceed the number of listings available!",
+      "exceedTip": "The put away quantity cannot exceed the available quantity!",
       "exceedingPrompt": "The number of serial numbers cannot exceed the sorting quantity!",
       "goods_owner_id": "Goods Owner Id",
       "goods_owner_name": "Goods Owner Name",
-      "grounding": "grounding",
+      "grounding": "Put Away",
       "id": "ID",
       "is_valid": "Valid",
       "length_unit": "Length Unit",
       "more_qty": "More Quantity",
       "mustInputErrorMsg": "Please fill in the arrival time!",
-      "notLocation": "Please select a storage location before listing!",
+      "notLocation": "Please select a storage location before putting away!",
       "num": "number",
       "origin": "Origin",
-      "putaway_qty": "Number of listings",
+      "putaway_qty": "Put Away Quantity",
       "revoke": "Revoke",
       "selectLocation": "Select location code",
       "selectOne": "Please select at least one piece of data!",
@@ -627,7 +627,7 @@
       "volume_unit": "Volume Unit",
       "weight": "Weight",
       "weight_unit": "Weight Unit",
-      "consecutive_number":"consecutive numbering"
+      "consecutive_number": "Consecutive Numbering"
     },
     "stockList": {
       "qty": "Quantity",
@@ -742,7 +742,7 @@
         "unit": "Unit",
         "price":"Commodity Price",
         "expiry_date":"Expiration Date",
-        "putaway_date":"Listing Date"
+        "putaway_date": "Put Away Date"
       },
       "warehouseTaking": {
         "addFromCommodity": "Choose From Commodity",
